# iilab.org-hakyll

./: .gitignore  README.md  _prose.yml  iilab-org-hakyll.cabal  rebuild.sh  shell.nix  site.hs
_assets/: _prose.yml
_assets/css/: iilab.css  main.css  owl.transitions.css
_assets/js/: iilab.js  jquery.easing.1.3.min.js  theme_scripts.js
_pages/: privacy.md
_posts/blog/: 2013-06-08-orgcon.md  2013-06-18-404lab.md  2013-07-03-git-data.md  2013-11-26-eudevdays.md  2014-02-22-ccs14.md  2014-03-18-news-challenge.md  2014-05-01-amnesty-news.md  2014-05-28-neo4j-docker.md  2014-06-03-tribulation-open-collaboration-part1.md  2014-06-09-lay-of-the-ocean.md  2014-06-10-reset-the-net.md  2014-06-23-techpresident-panic-button.md  2014-06-23-wired-panic-button.md  2014-06-28-neo4j-structr.md  2014-09-04-openoil-launch.md  2014-09-10-water-water-everywhere.md  2014-09-12-partnership-proof-of-concept.md  2014-09-22-open-droplet-enclosure.md  2014-10-18-open-droplet-serpentine-extinctly.md  2014-11-02-open-droplet-lote4.md  2014-11-06-betterplace-labtogether.md  2015-03-27-nix-osx-haskellng-hakyll.md
_posts/news/: 2013-06-08-orgcon.md  2013-06-18-404lab.md  2013-07-03-git-data.md  2013-11-26-eudevdays.md  2013-12-27-30c3.md  2014-02-22-ccs14.md  2014-03-18-news-challenge.md  2014-05-01-amnesty-news.md  2014-05-23-getting-started-droplet.md  2014-05-28-neo4j-docker.md  2014-06-10-reset-the-net.md  2014-06-28-neo4j-structr.md  (+21 more)
_site/: blog.html  index.html  news.html  rss.xml
_templates/: blog-bak.html  blog.html  default.html  index.html  news.html  pages.html  project.html
(+103 files in other folders)
