name:               iilab-org-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10
license:            LGPL
copyright:          Free Text String

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , process == 1.2.*
                  , binary == 0.7.*
                  , containers == 0.5.5.*
                  , hood == 0.2.*
                  , bytestring == 0.10.4.*
                  , text == 1.2.*
                  , hjsmin == 0.1.*
                  , filepath == 1.3.*
                  , split == 0.2.*
                  , hakyll == 4.6.*
  ghc-options:      -threaded
  default-language: Haskell2010